name:                blog
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Noon van der Silk
maintainer:          noonsilk@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

executable blog
  main-is: site.hs
  build-depends:
    base                   >= 4.0    && < 5.0
    , text
    , system-filepath
    , transformers 
    , pandoc
    , hakyll
    , containers
